--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "rn-svg-graph",
-  "version": "1.0.1.1",
+  "version": "1.0.14",
   "description": "A React Native library for creating line charts using SVG",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib/**/*"
+  ],
   "module": "src/index.ts",
-  "types": "src/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/orel-asper/rn-svg-graph.git"
